static: ensure map popup is never cut off, tweak styling

--- a/static/map.css
+++ b/static/map.css
@@ -72,6 +72,7 @@ body.map-page {
 	border-right: 1px solid var(--fxki-ui-2);
 	padding: .75rem;
 	background: var(--fxki-bg);
+	user-select: none;
 }
 .map-facilities {
 	width: 16.5%;
@@ -81,6 +82,7 @@ body.map-page {
 	min-height: 0;
 	border-left: 1px solid var(--fxki-ui-2);
 	background: var(--fxki-bg);
+	user-select: none;
 }
 .map-map {
 	flex: 1;
